<resources>
    <string name="app_name">Anggar.In</string>
    <string name="solusi_finansial_anda">Solusi finansial Anda</string>
    <string name="teks_splash_screen">dilengkapi fitur budgeting, tabungan dan kalkulator investasi, Anggar.In siap membantu kamu mengatur urusan keuangan.</string>
    <string name="button_panah">←</string>
    <string name="masuk">Masuk</string>
    <string name="masuk_email">abc@gmail.com</string>
    <string name="kirim_kode1">Kirim kode</string>
    <string name="txt_verifikasi_1">Masukkan kode verifikasi</string>
    <string name="txt_verifikasi_2">Masukkan kode verifikasi yang telah dikirimkan ke nomor email abc@gmail.com</string>
    <string name="nomor_verifikasi">000000</string>
    <string name="kirim_ulang">Kirim ulang</string>
    <string name="wajib_diisi">Wajib diisi</string>
    <string name="verifikasi">Verifikasi</string>
    <string name="txt_verifikasi_3">Email kamu salah kah?</string>
    <string name="ganti_email">Ganti email</string>
    <string name="profil">Profil</string>
    <string name="nama_profile">John Doe</string>
    <string name="email_profile">johndoe123@gmail.com</string>
    <string name="edit_profile">Edit profile</string>
    <string name="ini_image">ini image</string>
    <string name="Laporan_Analisa"><![CDATA[Laporan & Analisa]]></string>
    <string name="riwayat_transaksi">Riwayat transaksi</string>
    <string name="kirim_ulasan">Kirim ulasan</string>
    <string name="hapus_akun">Hapus akun</string>
    <string name="keluar">Keluar</string>
    <string name="nama">Nama</string>
    <string name="masukkan_nama">Masukkan nama</string>
    <string name="email">Email</string>
    <string name="masukkan_email">Masukkan email</string>
    <string name="nomor_hp">Nomor hp</string>
    <string name="masukkan_nomorhp">Masukkan nomor hp</string>
    <string name="tanggal_lahir">Tanggal lahir</string>
    <string name="simpan">Simpan</string>
    <string name="MM_DD_YY">MM/DD/YYYY</string>
    <string name="register">Register</string>
    <string name="anggarin">Selamat datang di Anggar.In</string>
    <string name="ganti_kata_sandi">Ganti kata sandi</string>
    <string name="kata_sandi">Kata sandi</string>
    <string name="masukkan_kata_sandi">Masukkan kata sandi</string>
    <string name="punya_akun_lah">Punya akun lah?</string>
    <string name="login_aja">Login aja</string>
    <string name="login">Login</string>
    <string name="belum_punya_akun">Belum punya akun kah?</string>
    <string name="register_lah">Register lah</string>
    <string name="nama_tabungan">Nama tabungan</string>
    <string name="target_capaian">Batas target kamu 20 Desember 2024</string>
    <string name="tabungan_terkumpul">Rp60.000 terkumpul</string>
    <string name="target_tabungan">dari Rp120.000</string>
    <string name="tabungan">Tabungan</string>
    <string name="belum_ada_tabungan">Belum ada tabungan nih</string>
    <string name="buat_tabungan">Buat Tabungan</string>
    <string name="tanggal_mulai_menabung">Tanggal mulai menabung</string>
    <string name="tanggal_target_dicapai">Tanggal target dicapai</string>
    <string name="target_dikumpulkan">Target yang dikumpulkan</string>
    <string name="Rp_0">Rp 0</string>
    <string name="desember">3 Desember 2024</string>
    <string name="uang_dikumpulkan">Uang yang dikumpulkan</string>
    <string name="target">Target</string>
    <string name="edit">Edit</string>
    <string name="hapus">Hapus</string>
    <string name="tambah">Tambah</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="jumlah_uang">Jumlah yang ingin ditambahkan</string>
    <string name="batal">Batal</string>
    <string name="kalkulator_investasi">Kalkulator Investasi</string>
    <string name="investasi1">Raih Kebebasan Finansialmu Mulai Hari Ini!</string>
    <string name="mulai_investasi">Mulai investasi</string>
    <string name="hitung_investasi">Hitung Investasi</string>
    <string name="pengeluaran_tahunan">Pengeluaran Tahunan</string>
    <string name="Rp">Rp</string>
    <string name="dana_kebebasan_finansial">Dana untuk kebebasan finansial</string>
    <string name="nama_saham">Nama Saham</string>
    <string name="selengkapnya">selengkapnya  </string>
    <string name="market_cap">Market Cap</string>
    <string name="hasil_prediksi">Hasil Prediksi</string>
    <string name="one_years_return">1 Year Price Returns (%)</string>
    <string name="sector">Sector</string>
    <string name="revenue">Revenue</string>
    <string name="grossprofit">Gross Profit</string>
    <string name="net_income">Net Income</string>
    <string name="annualeps">Annual EPS</string>
    <string name="prediction">Prediction :</string>
    <string name="lowprice">Low price</string>
    <string name="price1">Price 1</string>
    <string name="price2">Price 2</string>
    <string name="highprice">High Price</string>
    <string name="closeprice">Close Price</string>
    <string name="returnequity">Return on Equity (%)</string>
    <string name="three_years_return">3 Year Price Returns (%)</string>
    <string name="five_years_return">5 Year Price Returns (%)</string>
    <string name="dividend_yield">Dividend Yield (%)</string>
    <string name="payout_ratio">Payout Ratio (%)</string>
    <string name="jangkainvestasi">Jangka investasi</string>
    <string name="budgeting">Budgeting</string>
    <string name="kategori">kategori</string>
    <string name="ROI">ROI</string>
    <string name="investasi_awal">Investasi awal</string>
    <string name="target_return">Target Return</string>
    <string name="timestamp">TimeStamp</string>
</resources>