<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_anggar"
    tools:context=".ui.investasi.DetailInvestasiActivity">


    <ImageView
        android:id="@+id/img_btn_back_detailinvestasi"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/baseline_arrow_back_ios_new_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="contentdescription" />

    <TextView
        android:id="@+id/txt_investasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:text="@string/hasil_prediksi"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_btn_back_detailinvestasi">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_nama_sahama_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama_saham"
                android:textSize="14sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/line" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/prediction"
                android:textSize="13sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_timestamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/timestamp"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/txt_low_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lowprice"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/txt_high_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/highprice"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/txt_close_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/closeprice"
                android:textSize="11sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/line" />

            <TextView
                android:id="@+id/txt_market_cap_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/market_cap"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/txt_Revenue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/revenue"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/txt_netincome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/net_income"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/txt_annualEPS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/annualeps"
                android:textSize="11sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/line" />

            <TextView
                android:id="@+id/txt_return_on_equity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/returnequity"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/txt_1year_price_return"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one_years_return"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/txt_3year_price_return"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/three_years_return"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/txt_5year_price_return"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/five_years_return"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/txt_dividend_yield"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dividend_yield"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/txt_payout_ratio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payout_ratio"
                android:textSize="11sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/line" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>