<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_tabungan"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginBottom="50dp"
    android:backgroundTint="@color/hijau_lagi"
    app:cardCornerRadius="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_nama_tabungan"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/nama_tabungan"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_batas_target"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/target_capaian"
            android:textColor="@color/white"
            android:textSize="11sp"
            android:textStyle="italic" />

        <ProgressBar
            android:id="@+id/pb_target_tabungan"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="300dp"
            android:layout_height="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:max="100"
            android:progress="50"
            android:progressDrawable="@drawable/target_bar_tabungan" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_target_terkumpul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tabungan_terkumpul"
                android:textSize="11sp"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/txt_target_tabungan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:text="@string/target_tabungan"
                android:textSize="11sp"
                android:textColor="@color/white"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>