<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.investasi.InvestasiActivity">

    <ImageView
        android:id="@+id/img_btn_back_investasi"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/btn_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="contentdescription" />

    <TextView
        android:id="@+id/judul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/kalkulator_investasi"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/investasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/investasi1"
        android:textSize="13sp"
        android:textStyle="bold"
        android:layout_marginTop="60dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/img_btn_back_investasi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/image_investasi"
        android:layout_width="300dp"
        android:layout_height="350dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/image_investasi"
        app:layout_constraintTop_toBottomOf="@id/investasi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_mulai_investasi"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="80dp"
        android:text="@string/mulai_investasi"
        android:textStyle="bold"
        android:textSize="12sp"
        app:cornerRadius="15dp"
        app:layout_constraintTop_toBottomOf="@id/image_investasi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>